added filter, fixed command.